Issues submitting to Git API

--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
                         <input type="username" id="inputUserName" class="form-control" placeholder="Github username" required="" autofocus="">
                         <button class="btn btn-lg btn-primary btn-block" id="getUser" type="submit">Sign In</button>
                     </form>
+                    <!-- <form id="getGitUser" class="form-horizontal" role="form">  
+                        <div class="panel panel-info">
+                            <div class="panel-heading">
+                                <div class="panel-title">Sign In</div>
+                            </div>
+                            <div style="padding-top:30px" class="panel-body">                                
+                                <div style="margin-bottom: 25px" class="input-group">
+                                    <span class="input-group-addon"></span>
+                                    <input id="inputUserName" type="text" class="form-control" name="inputUserName" value="" placeholder="Github Username" />                                        
+                                </div>
+                                <div style="margin-top:10px" class="form-group">
+                                    <div class="col-sm-12 controls">
+                                        <button id="getUser" href="#" class="btn btn-success">Login</button>
+                                    </div>
+                                </div> 
+                            </div>                     
+                        </div>
+                    </form> -->
                 </div>
             </div>
             <div class="row">
